# Nobnb

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
apps/accounts/: models.py
apps/accounts/migrations/: 0001_initial.py  0002_user_city_user_country_user_latitude_user_longitude_and_more.py
apps/landing/: urls.py  views.py
apps/listings/: admin.py  models.py  urls.py  views.py
apps/listings/migrations/: 0001_initial.py  0002_remove_listing_villain_listing_short_name_and_more.py  0003_alter_listing_short_name.py  0004_listing_pictures_lg_listing_pictures_sm.py  0005_alter_listing_pictures_lg_alter_listing_pictures_sm.py  0006_alter_listing_pictures_lg_alter_listing_pictures_sm.py  0007_alter_listing_pictures_lg_alter_listing_pictures_sm.py  0008_alter_listing_pictures_lg_alter_listing_pictures_sm.py  0009_remove_listing_pictures_lg_and_more.py  0010_listing_search_terms.py
core/: jinja2.py  settings.py  urls.py
scripts/: 01_dummy_users.py  02_dummy_listings.py  03_dummy_listingImages.py  _run_all_dummy_data.py  dummy_listings.csv  dummy_listings.py  dummy_reviews.py  dummy_users.py  unspash_images.py
templates/: base.html  base_header.html  base_nav.html  landing.html  listing_detail.html  listings.html
templates/landing_components/: landing_listing_carousel.html  landing_listing_single.html  landing_modal.html
