[project]
name = "nobnb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "black>=25.1.0",
    "django==5.1.5",
    "django-appconf==1.0.6",
    "django-browser-reload==1.17.0",
    "django-compressor==4.5.1",
    "django-debug-toolbar==5.0.1",
    "django-extensions==3.2.3",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "pillow==11.1.0",
    "random-address>=1.1.1",
    "rcssmin==1.1.2",
    "requests>=2.32.3",
    "rjsmin==1.2.2",
    "sqlparse==0.5.3",
    "whitenoise==6.8.2",
]
